--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -2,17 +2,34 @@
   display: grid;
   grid-template-columns: 4fr 1fr;
   margin: 0 20px;
+  gap: 5px;
 }
 
 .products-container {
   margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 45px;
+  gap: 25px;
 }
 
 .cart-container {
   margin-top: 0;
   background-color: rgba(255, 153, 0, 0.3);
   padding: 10px;
+}
+
+@media screen and (max-width: 667px) {
+  .Shop {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 0 20px;
+    gap: 5px;
+  }
+
+  .products-container {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 25px;
+  }
 }
