--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,6 +20,15 @@
   margin-left: 36px;
 }
 
+.logout-btn {
+  background: #1c2b35;
+  margin-left: 30px;
+  border: none;
+  color: white;
+  font-size: 17px;
+  cursor: pointer;
+}
+
 .Links li a:hover {
   color: orange;
 }
