--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,7 +1,7 @@
 .Shop {
   display: grid;
-  grid-template-columns: 4fr 1fr;
-  margin: 0 20px;
+  grid-template-columns: 3fr 2fr;
+  margin: none 20px;
   gap: 5px;
 }
 
@@ -9,13 +9,14 @@
   margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 25px;
+  gap: 7px;
 }
 
 .cart-container {
+  width: 90%;
   margin-top: 0;
   background-color: rgba(255, 153, 0, 0.3);
-  padding: 10px;
+  padding: 0px;
 }
 
 @media screen and (max-width: 667px) {
@@ -30,6 +31,5 @@
     margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 25px;
   }
 }
