--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -81,10 +81,12 @@
   position: absolute;
   bottom: 0;
   color: #0e161a;
+  cursor: pointer;
 }
 
 .btn-cart:hover {
   background-color: orange;
+  cursor: pointer;
 }
 
 .btn-cart p {
